--- a/Jbpc.Common.ExcelProxy.UnitTests/Jbpc.Common.ExcelProxy.UnitTests.csproj
+++ b/Jbpc.Common.ExcelProxy.UnitTests/Jbpc.Common.ExcelProxy.UnitTests.csproj
@@ -6,9 +6,12 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
-    <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1000" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
       <PrivateAssets>all</PrivateAssets>
@@ -19,5 +22,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Jbpc.Common.ExcelProxy\Jbpc.Common.Excel.csproj" />
   </ItemGroup>
+
+
+
 
 </Project>
